@@ -408,6 +408,24 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|impl
+operator|.
+name|BinaryResponseParser
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|common
 operator|.
 name|SolrException
@@ -6697,7 +6715,9 @@ name|response
 parameter_list|)
 block|{
 return|return
-literal|"application/octet-stream"
+name|BinaryResponseParser
+operator|.
+name|BINARY_CONTENT_TYPE
 return|;
 block|}
 annotation|@
