@@ -44,34 +44,6 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|document
-operator|.
-name|Document
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|IndexableField
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
 name|index
 operator|.
 name|StorableField
@@ -103,6 +75,24 @@ operator|.
 name|util
 operator|.
 name|BytesRef
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|impl
+operator|.
+name|BinaryResponseParser
 import|;
 end_import
 
@@ -461,7 +451,9 @@ name|response
 parameter_list|)
 block|{
 return|return
-literal|"application/octet-stream"
+name|BinaryResponseParser
+operator|.
+name|BINARY_CONTENT_TYPE
 return|;
 block|}
 annotation|@
