@@ -44,6 +44,24 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|impl
+operator|.
+name|XMLResponseParser
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|common
 operator|.
 name|util
@@ -155,7 +173,9 @@ name|response
 parameter_list|)
 block|{
 return|return
-name|CONTENT_TYPE_XML_UTF8
+name|XMLResponseParser
+operator|.
+name|XML_CONTENT_TYPE
 return|;
 block|}
 block|}
