@@ -124,6 +124,15 @@ name|BinaryResponseParser
 extends|extends
 name|ResponseParser
 block|{
+DECL|field|BINARY_CONTENT_TYPE
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|BINARY_CONTENT_TYPE
+init|=
+literal|"application/octet-stream"
+decl_stmt|;
 annotation|@
 name|Override
 DECL|method|getWriterType
@@ -194,6 +203,18 @@ name|e
 argument_list|)
 throw|;
 block|}
+block|}
+annotation|@
+name|Override
+DECL|method|getContentType
+specifier|public
+name|String
+name|getContentType
+parameter_list|()
+block|{
+return|return
+name|BINARY_CONTENT_TYPE
+return|;
 block|}
 annotation|@
 name|Override
