@@ -118,6 +118,20 @@ name|org
 operator|.
 name|apache
 operator|.
+name|commons
+operator|.
+name|io
+operator|.
+name|IOUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|http
 operator|.
 name|Header
@@ -1610,7 +1624,9 @@ condition|)
 block|{
 name|contentType
 operator|=
-literal|"application/octet-stream"
+name|BinaryResponseParser
+operator|.
+name|BINARY_CONTENT_TYPE
 expr_stmt|;
 comment|// default
 block|}
@@ -2060,6 +2076,41 @@ operator|.
 name|getContent
 argument_list|()
 expr_stmt|;
+name|Header
+name|ctHeader
+init|=
+name|response
+operator|.
+name|getLastHeader
+argument_list|(
+literal|"content-type"
+argument_list|)
+decl_stmt|;
+name|String
+name|contentType
+decl_stmt|;
+if|if
+condition|(
+name|ctHeader
+operator|!=
+literal|null
+condition|)
+block|{
+name|contentType
+operator|=
+name|ctHeader
+operator|.
+name|getValue
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+name|contentType
+operator|=
+literal|""
+expr_stmt|;
+block|}
 comment|// handle some http level checks before trying to parse the response
 switch|switch
 condition|(
@@ -2118,6 +2169,13 @@ throw|;
 block|}
 break|break;
 default|default:
+if|if
+condition|(
+name|processor
+operator|==
+literal|null
+condition|)
+block|{
 throw|throw
 operator|new
 name|RemoteSolrException
@@ -2146,6 +2204,7 @@ argument_list|,
 literal|null
 argument_list|)
 throw|;
+block|}
 block|}
 if|if
 condition|(
@@ -2186,6 +2245,73 @@ return|return
 name|rsp
 return|;
 block|}
+name|String
+name|procCt
+init|=
+name|processor
+operator|.
+name|getContentType
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|procCt
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+operator|!
+name|contentType
+operator|.
+name|equals
+argument_list|(
+name|procCt
+argument_list|)
+condition|)
+block|{
+comment|// unexpected content type
+name|String
+name|msg
+init|=
+literal|"Expected content type "
+operator|+
+name|procCt
+operator|+
+literal|" but got "
+operator|+
+name|contentType
+operator|+
+literal|"."
+decl_stmt|;
+name|RemoteSolrException
+name|e
+init|=
+operator|new
+name|RemoteSolrException
+argument_list|(
+name|httpStatus
+argument_list|,
+name|msg
+operator|+
+literal|" "
+operator|+
+name|IOUtils
+operator|.
+name|toString
+argument_list|(
+name|respBody
+argument_list|)
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+throw|throw
+name|e
+throw|;
+block|}
+block|}
 comment|//      if(true) {
 comment|//        ByteArrayOutputStream copy = new ByteArrayOutputStream();
 comment|//        IOUtils.copy(respBody, copy);
@@ -2193,6 +2319,14 @@ comment|//        String val = new String(copy.toByteArray());
 comment|//        System.out.println(">RESPONSE>"+val+"<"+val.length());
 comment|//        respBody = new ByteArrayInputStream(copy.toByteArray());
 comment|//      }
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|rsp
+init|=
+literal|null
+decl_stmt|;
 name|String
 name|charset
 init|=
@@ -2206,12 +2340,10 @@ name|getEntity
 argument_list|()
 argument_list|)
 decl_stmt|;
-name|NamedList
-argument_list|<
-name|Object
-argument_list|>
+try|try
+block|{
 name|rsp
-init|=
+operator|=
 name|processor
 operator|.
 name|processResponse
@@ -2220,7 +2352,29 @@ name|respBody
 argument_list|,
 name|charset
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RemoteSolrException
+argument_list|(
+name|httpStatus
+argument_list|,
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
 if|if
 condition|(
 name|httpStatus
